--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       .container {
         width: 100%;
       }
-      .banner {
+      .banner__block {
         width: 100%;
         height: 340px;
       }
@@ -38,6 +38,10 @@
       .item__box {
         width: calc(100% / 3);
       }
+      .item__box:hover {
+        outline: 1px solid #66666655;
+        z-index: 1;
+      }
       .container img {
         width: 100%;
         height: 100%;
@@ -48,43 +52,45 @@
   </head>
   <body>
     <div class="main">
-      <div class="container banner">
-        <img src="https://fakeimg.pl/950x340/eebbcc,128/?text=950x340" />
+      <div class="container banner__block">
+        <a class="item__box" href="#" target="_blank">
+          <img src="https://fakeimg.pl/950x340/eebbcc,128/?text=950x340" />
+        </a>
       </div>
       <div class="container item__block">
-        <div class="item__box">
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
-        <div class="item__box">
+        </a>
+        <a class="item__box" href="#" target="_blank">
           <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
-        </div>
+        </a>
       </div>
     </div>
   </body>
