feat: add link & image
add css background image

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         height: 340px;
       }
       .item__block {
-        /* display: grid; */
-        /* grid-template-columns: repeat(3, 316.6px) */
+        /* display: grid;
+        grid-template-columns: repeat(3, 316.6px) */
+        background-color: #8ac2c3;
+        background-image: url('https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/bg.png');
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -53,43 +55,115 @@
   <body>
     <div class="main">
       <div class="container banner__block">
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/950x340/eebbcc,128/?text=950x340" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/category/cosmetic/?m-id=RADShop_rselect_vc"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/EDM_950x340.jpg"
+          />
         </a>
       </div>
       <div class="container item__block">
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R33-ab003uvprm/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/01.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R33-ab003csfnd/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/02.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R35-muiceypsrvc/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/03.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R35-won-wdmup/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/04.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R35-won-wdial/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/05.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R37-h-b_0010509/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/06.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R35-muiceptnt/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/07.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R35-cc-lt-f/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/08.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R33-ab003pc/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/09.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R33-ab003lnpwd/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/10.png"
+          />
         </a>
-        <a class="item__box" href="#" target="_blank">
-          <img src="https://fakeimg.pl/315x315/eebbcc,128/?text=315x315" />
+        <a
+          class="item__box"
+          href="https://www.rakuten.com.tw/shop/rselect/product/R33-ab003fcl/"
+          target="_blank"
+        >
+          <img
+            src="https://shop.r10s.com/b6e59d20-f684-11ec-932a-0242ac110009/July-EDM/11.png"
+          />
         </a>
       </div>
     </div>
